--- a/README
+++ b/README
@@ -1,4 +1,5 @@
-                  Lingua::Phonology
+Phonology version 0.11
+======================
 
 This module allows for the creation and manipulation of language
 phonologies computationally. It consists of a top-level module,
@@ -7,16 +8,41 @@ Lingua::Phonology, and several sub-modules.
 Documentation for all of these modules can be found on CPAN, or in the
 manual pages.
 
-Install:
+INSTALLATION
 
-On Unix and its kin, unzip and untar the package. This will create a
-temporary directory like 'Lingua-Phonology-0.00', where "0.00" will represent
-the current version number. Change to that directory and run:
+To install this module type the following:
 
-perl Makefile.PL && make && make test && make install
+   perl Makefile.PL
+   make
+   make test
+   make install
 
-That should be all that's needed. Alternately, you can just use the CPAN
-perl module, which will do all of this for you.
+This is assuming that you're on an operating system that supports make. If
+you're not (as with Windows), you'll be on your own for unzipping the files and
+putting them in the correct places. There may be scripts or other utilities for
+assisting you with this process.
 
-There's no reason for Lingua::Phonology not to work on other OS's, but
-you're on your own for installation if your OS doesn't support make.
+Regardless of your operating system, you can use the CPAN module to automate
+most of these steps.
+
+DEPENDENCIES
+
+This module requires these other modules and libraries:
+
+	File::Basename
+	File::Spec
+
+I'd like to get rid of this dependency at some point in the future, so keep
+your eyes out for that. If you don't have these modules and are unwilling or
+unable to install them, be aware that Lingua::Phonology is still usable. The
+only loss is that the loading of default features will be disabled. You can,
+however, simply drag the files 'default.features' and 'default.symbols' from
+their homes and put them somewhere convenient for you. You'll find them in the
+same directory that Features.pm and Symbols.pm reside in.
+
+COPYRIGHT AND LICENCE
+
+Copyright (C) 2003 Jesse Bangs
+
+This library is free software; you can redistribute it and/or modify
+it under the same terms as Perl itself. 
