Import of JASPAX/Lingua-Phonology-0.2 from CPAN.
gitpan-cpan-distribution: Lingua-Phonology
gitpan-cpan-version:      0.2
gitpan-cpan-path:         JASPAX/Lingua-Phonology-0.2.tar.gz
gitpan-cpan-author:       JASPAX
gitpan-cpan-maturity:     released

--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,12 @@
+changes from v0.11
+* Removed Defaults.pm
+* Removed files default.features and default.segments (now included with their modules)
+* Added Boundary.pm
+* Modified the spelling algorithm for better speed (75%-125% better, in fact)
+* Added new symbols to the default set
+* Various minor documentation fixes
+* Various other code tweaks
+
 changes from v0.01
 * Added Syllable.pm
 * Added Functions.pm
