--- a/TODO
+++ b/TODO
@@ -17,7 +17,7 @@ dissimilate(), etc. [Implemented in 0.11]
 Wishlist from 0.11:
 
 * Allow users to define their own codereferences for number_form and text_form
-in Features (will require some code revision).
+in Features
 
 * Improve the Rules module for speed. Avoid the current bad implementation of
 deleting and altering segments.
@@ -30,10 +30,10 @@ open_defaults function anymore (why didn't I just do this in the first place?).
 
 * Allow for diacritics in the Symbols module. [Implemented in 0.2]
 
-* Create a shell mode.
+* Create a shell mode(?).
 
 * Create a loadfile method for Rules. This will be a major challenge, given the
-complexity of a rule.
+complexity of a rule. [Implemented in 0.3]
 
 ==============================
 
@@ -41,3 +41,12 @@ Wishlist from 0.2:
 
 * Most of the things from 0.11 are still unimplemented (and perhaps should stay that way?)
 
+=============================
+
+Wishlist from 0.3:
+
+* Have a better way to handle segments in rules
+
+* Expand the capabilities of the linguistic rules parser (include variables)
+
+* Speed up the Rules module
